# data_analysis_agent

./: .gitignore  CLAUDE.md  README.md
agent/: graph.py  llm.py  nodes.py  states.py
api/: main.py  models.py  state.py
api/routes/: file_routes.py  thread_routes.py  workflow_routes.py
backend/: main.py  pyproject.toml
backend/agent/: app_cache.py  cli.py  graph_run.py
backend/api/: main.py  models.py  state.py
backend/api/routes/: file_routes.py  thread_routes.py  workflow_routes.py
backend/config/: mock_session.py
backend/memory/: checkpointer.py  session.py
backend/prompts/: data_analysis_prompt.txt  image_analysis_prompt.txt
backend/utils/: download_font.py  info_loader.py  llm_cache.py  logger.py  path_tool.py  prompt_loader.py  setup_font.py
config/: mock_session.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: ChatArea.vue  FileSelector.vue  Sidebar.vue
frontend/src/styles/: main.css
memory/: __init__.py
prompts/: code_healing_prompt.txt
static/: index.html
static/css/: styles.css
static/js/: chat.js
tools/: check_node_state.py  code_executor.py  data_clean.py
utils/: image_base64.py  info_loader.py  path_tool.py  thread_check.py
